# apps/backend/src/routes/index.ts
@@ -7,3 +7,4 @@ import "@/routes/trackers.routes"
 import "@/routes/weapons.routes"
 import "@/routes/skill-rolls.routes"
 import "@/routes/bonus-rolls.routes"
+import "@/routes/comments.routes"
